force-app/main/default/objects/Locations__c/Locations__c.object-meta.xml
<CustomObject>
    <label>Locations</label>
    <nameField>
        <label>Locations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>