force-app/main/default/objects/Locations__c/fields/Average_Potential_Per_Desk__c.field-meta.xml
<CustomField>
    <fullName>Average_Potential_Per_Desk__c</fullName>
    <label>Average Potential Per Desk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>