force-app/main/default/objects/Locations__c/fields/Bank_number__c.field-meta.xml
<CustomField>
    <fullName>Bank_number__c</fullName>
    <label>Bank number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>