force-app/main/default/objects/Locations__c/fields/Big_Deal_Salesperson_15_sales__c.field-meta.xml
<CustomField>
    <fullName>Big_Deal_Salesperson_15_sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Big Deal Salesperson +15 sales</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>