force-app/main/default/objects/Locations__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tel Aviv</fullName>
            </value>
            <value>
                <fullName>Bnei Brak</fullName>
            </value>
            <value>
                <fullName>Ra&apos;anana</fullName>
            </value>
            <value>
                <fullName>Modiin</fullName>
            </value>
            <value>
                <fullName>Ramat Gan</fullName>
            </value>
            <value>
                <fullName>Petah Tikva</fullName>
            </value>
            <value>
                <fullName>Rishon LeZion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>