force-app/main/default/objects/Locations__c/fields/Desk_Count__c.field-meta.xml
<CustomField>
    <fullName>Desk_Count__c</fullName>
    <description>Aggregated count of desks for standard products - Used in reports and dash</description>
    <label>Desk Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>