force-app/main/default/objects/Locations__c/fields/Full_Google_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Google_Address__c</fullName>
    <defaultValue>(&quot;please read the tooltip&quot;)</defaultValue>
    <description>Used in Tour Scheduler automations. please fill it the way it appears in a calendar event:</description>
    <inlineHelpText>Used in Tour Scheduler automations. Please fill it in the way it appears in a calendar event:
Look for the location name in the Location field on the calendar event and copy the result</inlineHelpText>
    <label>Full Google Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>