force-app/main/default/objects/Locations__c/fields/Hebrew_Name__c.field-meta.xml
<CustomField>
    <fullName>Hebrew_Name__c</fullName>
    <description>Used for tour schedulre automation in Zapier</description>
    <label>Hebrew Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>