force-app/main/default/objects/Locations__c/fields/Institution_code__c.field-meta.xml
<CustomField>
    <fullName>Institution_code__c</fullName>
    <label>Institution code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>