force-app/main/default/objects/Locations__c/fields/New_location__c.field-meta.xml
<CustomField>
    <fullName>New_location__c</fullName>
    <description>If its the new location the field equals true</description>
    <label>New location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>