force-app/main/default/objects/Locations__c/fields/Occupancy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Rate__c</fullName>
    <formula>IF(NULLVALUE(Total_Desks__c, 0) &gt; 0, NULLVALUE(Occupied_Desks__c, 0) / Total_Desks__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Rate</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Percent</type>
</CustomField>