force-app/main/default/objects/Locations__c/fields/Occupied_Desks__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Desks__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Sum of standard products from all active contracts.</inlineHelpText>
    <label>Occupied Desks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>