force-app/main/default/objects/Locations__c/fields/Parking_Count__c.field-meta.xml
<CustomField>
    <fullName>Parking_Count__c</fullName>
    <label>Parking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>