force-app/main/default/objects/Locations__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>