force-app/main/default/objects/Locations__c/fields/Total_Desks__c.field-meta.xml
<CustomField>
    <fullName>Total_Desks__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Sum of standard products from all products related to the location.</inlineHelpText>
    <label>Total Desks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>