force-app/main/default/objects/Locations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Area__c</columns>
    <columns>City__c</columns>
    <columns>Desk_Count__c</columns>
    <columns>Parking_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>