force-app/main/default/objects/Locations__c/listViews/Area_Petah_Tikva_Ramat_Gan_Bnei_Brak.listView-meta.xml
<ListView>
    <fullName>Area_Petah_Tikva_Ramat_Gan_Bnei_Brak</fullName>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Area__c</columns>
    <columns>City__c</columns>
    <columns>Area_Manager__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Site_Manager__c</columns>
    <columns>Big_Deal_Salesperson_15_sales__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>Petah Tikva - Ramat Gan - Bnei Brak</value>
    </filters>
    <label>Area Petah Tikva - Ramat Gan - Bnei Brak</label>
</ListView>