force-app/main/default/objects/Locations__c/listViews/Area_Tel_Aviv_Modiin.listView-meta.xml
<ListView>
    <fullName>Area_Tel_Aviv_Modiin</fullName>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Area__c</columns>
    <columns>City__c</columns>
    <columns>Area_Manager__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Site_Manager__c</columns>
    <columns>Big_Deal_Salesperson_15_sales__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>Tel Aviv - Modiin</value>
    </filters>
    <label>Area Tel Aviv - Modiin</label>
</ListView>